# ResDAG

./: .gitignore  404.html  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  PARALLEL_DEVELOPMENT.md  README.md  index.html  lorenz.pt  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.claude/: launch.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  new_component.yml
.github/workflows/: _test.yml  ci.yml  docs.yml  pr-title.yml  release.yml
assets/forecasts/: arneodo.json  halvorsen.json  lorenz.json  rucklidge.json  thomas.json
benchmarks/: .gitignore  README.md  compile_scan_reservoir.py  requirements.txt  targets.json
benchmarks/julia/: Manifest.toml  Project.toml  rc_bench.jl
benchmarks/rc_bench/: __init__.py  config.py  data.py  metrics.py  report.py  run.py  timing.py
benchmarks/results/: REPORT.md  latest.json
docs/: forecasting.md  functional_api.md  hyperparameter_optimization.md  index.md  input_feedback_initializers.md  migrating.md  model_visualization.md  phase3_summary.md  premade_models.md  save_load.md  topology_system.md  trainable_weights.md  training-paths.md
docs/_tooling/: README.md  apply_theme.py  theme.json
docs/about/: architecture.md  changelog.md  citation.md  contributing.md  index.md  related-work.md
docs/api/: composition.md  hpo.md  index.md  init.md  layers.md  models.md  training.md
docs/cookbook/: custom-components.md  data.md  ensembles.md  gpu.md  hpo.md  index.md  initializers.md  multi-readout.md  ngrc.md  pipelines.md  save-load.md  topologies.md  visualization.md
docs/css/: notebook.css
docs/examples/: custom-initializer.md  custom-model.md  ensemble.md  hpo-example.md  index.md  input-driven.md  lorenz.md  mackey-glass.md  ngrc-demo.md  pipeline-integration.md  sine.md
docs/extending/: custom-aggregator.md  custom-cell.md  custom-initializer.md  custom-loss.md  custom-model.md  custom-readout.md  custom-topology.md  index.md  new-cell.md  new-initializer.md  new-model.md  new-topology.md
docs/getting-started/: concepts.md  index.md  installation.md  lorenz-walkthrough.md  mental-model.md  quickstart.md  your-first-esn.md
docs/guide/: composition.md  custom-layers.md  esn-layer.md  forecasting.md  index.md  initializers.md  ngrc.md  persistence.md  premade-models.md  readouts.md  topologies.md  training.md
docs/guides/: builtin-models.md  chaotic-systems.md  coupled-ensembles.md  data-preparation.md  functional-api.md  gpu-and-performance.md  hyperparameter-optimization.md  index.md  initializers.md  input-driven-systems.md  multi-readout.md  ngrc-vs-esn.md  save-and-load.md  topologies.md  visualizing-architectures.md
docs/hpo/: advanced.md  index.md  loss-functions.md  overview.md
docs/includes/: abbreviations.md
docs/javascripts/: extra.js
docs/learn/: anatomy.md  building-models.md  chaos-and-losses.md  echo-state-property.md  ensembles.md  forecasting.md  index.md  input-feedback-initializers.md  ngrc.md  quickstart.md  readouts.md  reservoir-computing.md  reservoir-layers.md  topologies.md  training.md  tuning.md  two-phase-training.md  what-is-reservoir-computing.md
docs/overrides/: home.html
docs/project/: changelog.md  citation.md  contributing.md  ecosystem.md  index.md  related-work.md
docs/reference/: core.md  ensemble.md  hpo.md  index.md  init.md  layers.md  models.md  top-level.md  training.md  utils.md
docs/start/: concepts.md  first-forecast.md  index.md  install.md
docs/stylesheets/: extra.css
docs/theory/: design.md  dynamics.md  index.md  readout.md  timing.md
docs/under-the-hood/: architecture.md  index.md  readout-fitting.md  reservoir-equations.md  timing-and-alignment.md
docs/workflows/: benchmarks.md  compile.md  deploy.md  forecast.md  index.md  ngrc.md  streaming.md  train.md  tune.md
examples/: 00_easiest_api.py  00_registry_system.py  01_quickstart.py  01_reservoir_with_topology.py  02_input_feedback_initializers.py  02_premade_models.py  03_functional_api.py  03_model_composition.py  04_model_visualization.py  04_topologies_and_initializers.py  05_functional_api.py  05_training_paths.py  06_forecasting.py  06_premade_models.py  07_ensembles.py  07_save_load_models.py  08_forecasting.py  08_save_load.py  09_model_visualization_new.py  09_training.py  09_visualization.py  10_hpo.py  11_ensemble_forecasting.py  11_gpu_benchmark.py  12_feature_extractor.py  12_pipeline_integration.py  13_model_visualization.py  13_windowed_forecast.py  14_streaming_dataloader.py  README.md
hooks/: docs_autogen.py
migrating/: index.html
project/: index.html
project/changelog/: index.html
project/citation/: index.html
project/contributing/: index.html
project/ecosystem/: index.html
project/related-work/: index.html
reference/: index.html
reference/core/: index.html
reference/hpo/: index.html
reference/init/: index.html
reference/layers/: index.html
reference/models/: index.html
reference/top-level/: index.html
reference/training/: index.html
reference/utils/: index.html
scripts/: build_docs_assets.py  generate_docs_figures.py  generate_hero_forecasts.py
scripts/docs_figures/: __init__.py  __main__.py  _common.py  activations.py  architectures.py  data.py  hpo.py  initializers.py  lorenz.py  signals.py  sine.py  topologies.py  topology_comparison.py
search/: search_index.json
src/resdag/: __init__.py  facade.py
src/torch_rc/: __init__.py
start/: index.html
start/concepts/: index.html
start/first-forecast/: index.html
start/install/: index.html
tests/: __init__.py  conftest.py  test_facade.py  test_gpu_and_compile.py  test_import_hygiene.py  test_packaging_metadata.py
tests/test_benchmarks/: test_perf_regression.py
tests/test_composition/: test_save_load.py
tests/test_core/: __init__.py  test_compile_and_precision.py  test_compiled_scan_reservoir.py  test_feature_extractor.py  test_forecast.py  test_model.py  (+3 more)
theory/: index.html
tools/: affected_tests.py  regen_golden_forecasts.py
workflows/: index.html
(+285 files in other folders)
