[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "resdag"
dynamic = ["version"]
description = "PyTorch-native reservoir computing library with GPU acceleration"
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = "MIT"
authors = [{ name = "Daniel Estevez-Moya", email = "kemossabee@gmail.com" }]
keywords = [
    "reservoir computing",
    "echo state networks",
    "pytorch",
    "machine learning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.10.0",
    "numpy>=2.0.0",
    "networkx>=3.0",
    "pytorch-symbolic>=1.2.1",
    "graphviz>=0.21",
    "scipy>=1.17.0",
]

[project.urls]
Homepage = "https://github.com/El3ssar/resdag"
Documentation = "https://el3ssar.github.io/resdag/"
Repository = "https://github.com/El3ssar/resdag"
Issues = "https://github.com/El3ssar/resdag/issues"

[project.optional-dependencies]
hpo = ["optuna>=3.0.0"]
dev = [
    "basedpyright>=1.37.1",
    "pytest>=9.0.2",
    "pytest-cov>=4.0.0",
    "black>=25.12.0",
    "ruff>=0.14.10",
    "mypy>=1.0.0",
    "optuna>=4.0.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
    "mkdocs-glightbox>=0.4",
    "pymdown-extensions>=10.7",
    "griffe>=1.0",
]


[dependency-groups]
dev = [
    "basedpyright>=1.13.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
    "mypy>=1.8.0",
    "optuna>=4.0.0",
    "matplotlib>=3.9",  # docs figure pipeline (docs/_tooling/figures)
]

[tool.hatch.build.targets.wheel]
packages = ["src/resdag"]

[tool.hatch.version]
path = "src/resdag/__init__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--cov=resdag",
    "--cov-report=term-missing",
    "--cov-report=html",
    "-m",
    "not benchmark",
]
markers = [
    "gpu: requires a CUDA device (auto-skipped when unavailable)",
    "slow: long-running test (seconds); always runs, deselect with -m 'not slow'",
    "benchmark: performance assertion, deselected by default; run with -m benchmark",
]

[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313", "py314"]

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E", "F", "I", "N", "W"]
lint.ignore = ["E501"]                  # Line too long (handled by black)

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]                  # Unused imports in __init__.py are OK
# Math notation (W, A, G, Lk, ...) is the house style in the scientific code:
# renaming matrices and graphs to appease N8xx would hurt readability.
"src/resdag/**" = ["N803", "N806", "N812"]
"tests/**" = ["N803", "N806"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

# -------------------------------------------------------------------------
# Release automation — python-semantic-release
# Version bumps are computed from conventional commit messages on main:
#   feat: -> minor, fix:/perf: -> patch, "BREAKING CHANGE:" -> major
# (major_on_zero=false: while 0.x, breaking changes bump the minor instead).
# The version lives ONLY in src/resdag/__init__.py; PSR rewrites it, commits,
# tags vX.Y.Z, and creates the GitHub release. CI publishes to PyPI.
# -------------------------------------------------------------------------
[tool.semantic_release]
version_variables = ["src/resdag/__init__.py:__version__"]
build_command = "python -m pip install build && python -m build"
commit_message = "chore(release): v{version} [skip ci]"
tag_format = "v{version}"
allow_zero_version = true
major_on_zero = false

[tool.semantic_release.commit_parser_options]
parse_squash_commits = true
ignore_merge_commits = true
